deploy: 08aec0ccb2316acc01b86e1cf2889499508b4293

--- a/_sources/week1/lecture.ipynb
+++ b/_sources/week1/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72981e29",
+   "id": "6a7430a1",
    "metadata": {},
    "source": [
     "# Lecture: Course Introduction\n",
@@ -24,6 +24,74 @@
     "Big data is a collection of massive and complex data sets and data volume that include the huge quantities of data, data management capabilities, social media analytics and real-time data. \n",
     "`````\n",
     "\n",
+    "## Definition of Machine Learning\n",
+    "\n",
+    "The basic concept of machine learning in data science involves using statistical learning (i.e., finding a predictive function based on data) and optimization methods that let computers analyze datasets and identify patterns: it is all about making ***predictions*** and ***classification***. \n",
+    "\n",
+    "See this interactive examples from R2D3:\n",
+    "\n",
+    "http://www.r2d3.us/visual-intro-to-machine-learning-part-1 \n",
+    "\n",
+    "http://www.r2d3.us/visual-intro-to-machine-learning-part-2 \n",
+    "\n",
+    "In general, a supervised machine learning algorithm consists of roughly three components:\n",
+    "\n",
+    "1.\t***A decision process:*** Calculation *steps/recipe* to use the data to achieve a goal (e.g., make a  prediction or classification). Based on patterns in the input data, the algorithm returns an output.\n",
+    "\n",
+    "2.\t***An error function:*** Evaluates the prediction/classification of the model (i.e., *model accuracy*). Did the decision process get it right? If not, how do you quantify “how bad” the miss was?\n",
+    "\n",
+    "3. ***An optimization process:*** Iterations of the algorithm to *find better parameters values (or weights)* than previously estimated, repeated until a *maximum number of iterations* or a *minimum level of accuracy* is reached. The objective is to improve the initial “guess” of the model parameters and thus the overall performance of the model.\n",
+    "\n",
+    "An example from NetFlix:\n",
+    "\n",
+    "*Whenever you access the Netflix service, our recommendations system strives to help you find a show or movie to enjoy with minimal effort. We estimate the likelihood that you will watch a particular title in our catalog based on a number of factors including: your interactions with our service (such as your viewing history and how you rated other titles), other members with similar tastes and preferences on our service, and information about the titles, such as their genre, categories, actors, release year, etc. […] All of these pieces of data are used as inputs that we process in our algorithms.*\n",
+    "\n",
+    "The algorithm’s job is to assign (initially through “guesses”) weights to the factors identified by NetFlix. If the algorithm gets it right, the weights it used stay the same. If it gets a movie wrong, the weights that led to the wrong decision get turned down so it doesn’t make that kind of mistake again. Since a machine learning algorithm updates such weights automatically, its accuracy improves with each ***iteration*** as it ***learns*** from the data it analyzes, often times uncovering hidden insights without being specifically programmed to do so. \n",
+    "\n",
+    "## Types of Machine Learning\n",
+    "\n",
+    "There are many types of machine learning models defined by the presence or absence of human influence on raw data:\n",
+    "\n",
+    "1. ***Supervised learning:*** The dataset being used has been pre-labeled and classified by users to allow the algorithm to see how accurate its performance is.\n",
+    "\n",
+    "2. ***Unsupervised learning:*** The raw dataset being used is unlabeled and an algorithm identifies patterns and relationships within the data without help from users.\n",
+    "\n",
+    "3. ***Semi-supervised learning:*** The dataset contains structured and unstructured data, which guides the algorithm on its way to making independent conclusions. The combination of the two data types in one training dataset allows machine learning algorithms to learn to label unlabeled data.\n",
+    "\n",
+    "4. ***Reinforcement learning:*** The dataset uses a “rewards/punishments” system, offering feedback to the algorithm to learn from its own experiences by trial and error.\n",
+    "\n",
+    "<img src=\"../_static/images/machine-learning-infographic_2.jpg\" class=\"bg-primary mb-1\">\n",
+    "\n",
+    "## Commonly Used Machine Learning Algorithms\n",
+    "\n",
+    "The purpose of machine learning is to use machine learning algorithms to analyze data in order to make predictions and/or classification. There are a number of machine learning algorithms that are commonly used worldwide. Each of these machine learning algorithms can have numerous applications in a variety of academic and business settings. \n",
+    "\n",
+    "### Linear Regressions\n",
+    "\n",
+    "Linear regression is an algorithm used to analyze linear relationships between independent input variables and at least one response variable. In other words, the linear regression models attempt to map a straight line, or a linear relationship, through the data. If statistical assumptions are not violated, we can also interpret the statistical significance of the parameters estimated by the linear models (i.e., are they different from zero?) and thus the influence of our variables in the system we are studying.\n",
+    "\n",
+    "### Logistic Regressions\n",
+    "\n",
+    "Logistic regression is a supervised learning algorithm commonly used for classification problems. Instead of continuous output like in linear regression, a logistic model predicts the probability of a binary (e.g., yes/no) event occurring. For example, the likelihood of deforestation in a location of the Amazon rainforest.\n",
+    "\n",
+    "### Neural Networks\n",
+    "\n",
+    "Neural networks, also known as artificial neural networks (ANNs) or simulated neural networks (SNNs), are a subset of machine learning and are at the heart of deep learning algorithms and artificial intelligence. These algorithms attempt to replicate the way the human brain processes information to understand and intelligently classify data and predict outcomes. Neural network algorithms are designed to quickly learn from input training data and improve their accuracy with each model iterations, constructing complex, non-linear relationships among the input variables.\n",
+    "\n",
+    "### Decision Trees\n",
+    "\n",
+    "Decision trees can be used for both predicting numerical values (regression) and classifying data into categories. Decision trees use a branching sequence of linked decisions that can be represented with a tree diagram. One of the advantages of decision trees is that they are easy to inspect (unlike the complex, “black box” of the neural network). \n",
+    "\n",
+    "### Random Forests\n",
+    "\n",
+    "Random forest models are capable of classifying data using hundreds (if not thousands) of decision trees all at once. Like decision trees, random forests can be used to determine the classification of categorical variables or the regression of continuous variables. These random forest models generate a number of decision trees as specified by the user, forming what is known as an ensemble (or should we call it a “forest,” get it?) Each tree then makes its own prediction based on some input data, and the random forest machine learning algorithm then makes a prediction by combining the predictions of each decision tree in the ensemble. \n",
+    "\n",
+    "## Why is Machine Learning relevant?\n",
+    "\n",
+    "1.\t***Processing capabilities:*** Processing power is more efficient and readily available. Algorithms can be programmed to process data on their own, determine conclusions, and identify patterns are invaluable in a world where massive volumes of data are collected and become available on a daily basis (***“big data”***).\n",
+    "\n",
+    "2.\t***Unexpected findings:*** Since a machine learning algorithm updates itself autonomously, accuracy improves with each run as it ***learns*** from the data and complex relationships are established, algorithms can gain unexpected insights about a system or problem without being specifically programmed to do so.\n",
+    "\n",
     "## Python\n",
     "Python is a programming language which allows us to give instructions to the computer. These instructions can be as simple as \"add together these two numbers\" or as complex as \"give me the average CO2 concentration for 2020\". For the former we will be able to complete the task using only a single instruction but for the latter, we may have to write a larger program containing hundreds or thousands of instructions.\n",
     "\n",
@@ -33,26 +101,7 @@
     "\n",
     "```{seealso} \n",
     "You can find much more info about Python [here](https://docs.python.org/3/faq/general.html#what-is-python)\n",
-    "```\n",
-    "\n",
-    "## What is machine learning?\n",
-    "Machine learning is a subfield of artificial intelligence, which is broadly defined as the capability of a machine to imitate intelligent human behavior. Artificial intelligence systems are used to perform complex tasks in a way that is similar to how humans solve problems.\n",
-    "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/7gbGavTLUUE\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
-    "\n",
-    "Machine learning starts with data — numbers, photos, or text, like bank transactions, pictures of people or even bakery items, repair records, time series data from sensors, or sales reports. The data is gathered and prepared to be used as training data, or the information the machine learning model will be trained on. The more data, the better the program.\n",
-    "\n",
-    "“The function of a machine learning system can be *descriptive*, meaning that the system uses the data to explain what happened; *predictive*, meaning the system uses the data to predict what will happen; or *prescriptive*, meaning the system will use the data to make suggestions about what action to take,” the researchers wrote.  \n",
-    "\n",
-    "There are three subcategories of machine learning:\n",
-    "\n",
-    "**Supervised machine learning** models are trained with labeled data sets, which allow the models to learn and grow more accurate over time. For example, an algorithm would be trained with pictures of dogs and other things, all labeled by humans, and the machine would learn ways to identify pictures of dogs on its own. Supervised machine learning is the most common type used today.\n",
-    "\n",
-    "In **unsupervised machine learning**, a program looks for patterns in unlabeled data. Unsupervised machine learning can find patterns or trends that people aren’t explicitly looking for. For example, an unsupervised machine learning program could look through online sales data and identify different types of clients making purchases.\n",
-    "\n",
-    "**Reinforcement machine learning** trains machines through trial and error to take the best action by establishing a reward system. Reinforcement learning can train models to play games or train autonomous vehicles to drive by telling the machine when it made the right decisions, which helps it learn over time what actions it should take.\n",
-    "\n",
-    "<img src=\"../_static/images/machine-learning-infographic_2.jpg\" class=\"bg-primary mb-1\">"
+    "```"
    ]
   }
  ],
