deploy: 5741c1cbec790c2299e3ed31e3ddac38ae6c9ff0

--- a/_sources/week1/lecture.ipynb
+++ b/_sources/week1/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a7430a1",
+   "id": "eddd9974",
    "metadata": {},
    "source": [
     "# Lecture: Course Introduction\n",
@@ -28,11 +28,11 @@
     "\n",
     "The basic concept of machine learning in data science involves using statistical learning (i.e., finding a predictive function based on data) and optimization methods that let computers analyze datasets and identify patterns: it is all about making ***predictions*** and ***classification***. \n",
     "\n",
-    "See this interactive examples from R2D3:\n",
+    "See these interactive examples from R2D3:\n",
     "\n",
-    "http://www.r2d3.us/visual-intro-to-machine-learning-part-1 \n",
+    "[R2D3 Introduction to Machine Learning: Part 1](http://www.r2d3.us/visual-intro-to-machine-learning-part-1) \n",
     "\n",
-    "http://www.r2d3.us/visual-intro-to-machine-learning-part-2 \n",
+    "[R2D3 Introduction to Machine Learning: Part 1](http://www.r2d3.us/visual-intro-to-machine-learning-part-2) \n",
     "\n",
     "In general, a supervised machine learning algorithm consists of roughly three components:\n",
     "\n",
