--- a/_sources/week3/lecture.ipynb
+++ b/_sources/week3/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42d1383d",
+   "id": "19a767d5",
    "metadata": {},
    "source": [
     "# Lecture: Introduction to Artificial Neural Networks\n",
@@ -19,7 +19,9 @@
     "## Artificial neural networks\n",
     "Neural networks are a commonly used, specific class of machine learning algorithms. Artificial neural networks are modeled on the human brain, in which thousands or millions of processing nodes are interconnected and organized into layers.\n",
     "\n",
-    "In an artificial neural network, cells, or nodes, are connected, with each cell processing inputs and producing an output that is sent to other neurons. Labeled data moves through the nodes, or cells, with each cell performing a different function. In a neural network trained to identify whether a picture contains a cat or not, the different nodes would assess the information and arrive at an output that indicates whether a picture features a cat.\n",
+    "Artificial neural networks (ANNs) are comprised of a node layers, containing an input layer, one or more hidden layers, and an output layer. Each node, or artificial neuron, connects to another and has an associated weight and threshold. If the output of any individual node is above the specified threshold value, that node is activated, sending data to the next layer of the network. Otherwise, no data is passed along to the next layer of the network.\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "## Model validation"
