--- a/_sources/week1/lecture.ipynb
+++ b/_sources/week1/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e082458",
+   "id": "23325ee8",
    "metadata": {},
    "source": [
     "# Lecture: Course Introduction\n",
@@ -30,9 +30,9 @@
     "\n",
     "See these interactive examples from R2D3:\n",
     "\n",
-    "[R2D3 Introduction to Machine Learning: Part 1](http://www.r2d3.us/visual-intro-to-machine-learning-part-1) \n",
+    "__[R2D3 Introduction to Machine Learning: Part 1](http://www.r2d3.us/visual-intro-to-machine-learning-part-1)__ \n",
     "\n",
-    "[R2D3 Introduction to Machine Learning: Part 1](http://www.r2d3.us/visual-intro-to-machine-learning-part-2) \n",
+    "__[R2D3 Introduction to Machine Learning: Part 2](http://www.r2d3.us/visual-intro-to-machine-learning-part-2)__ \n",
     "\n",
     "In general, a supervised machine learning algorithm consists of roughly three components:\n",
     "\n",
