--- a/_sources/week4/tutorial2.ipynb
+++ b/_sources/week4/tutorial2.ipynb
@@ -236,7 +236,7 @@
     "!pip install rasterio\n",
     "!pip install rioxarray\n",
     "!pip install cdsapi\n",
-    "!pip install numpy --upgrade\n"
+    "!pip install numpy --upgrade"
    ]
   },
   {
