--- a/week1/tutorial3.ipynb
+++ b/week1/tutorial3.ipynb
@@ -8,6 +8,10 @@
     "\n",
     "In this tutorial you will further learn on how to use Pandas, one of the most important python packages to be used within data sciences.\n",
     "\n",
+    "```{important} This tutorial is not part of your final grade. You simply have to pass it by answering the questions.\n",
+    "```\n",
+    "\n",
+    "\n",
     "```{admonition} Acknowledgements\n",
     "This tutorial is heavily based upon the work of [others](https://www.tomasbeuzen.com/python-programming-for-data-science/) \n",
     "```"
